@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: changelog_page.php,v 1.7 2004-08-26 23:24:41 vboctor Exp $
+	# $Id: changelog_page.php,v 1.8 2004-10-03 12:41:09 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -15,20 +15,37 @@
 	$t_core_path = config_get( 'core_path' );
 	
 	require_once( $t_core_path.'bug_api.php' );
+
+	# Print header for the specified project version.
+	function print_version_header( $p_version_id ) {
+		$t_project_id   = version_get_field( $p_version_id, 'project_id' );
+		$t_version_name = version_get_field( $p_version_id, 'version' );
+		$t_project_name = project_get_field( $t_project_id, 'name' );
+
+		$t_release_title = $t_project_name . ' - ' . $t_version_name;
+		echo $t_release_title, '<br />';
+		echo str_pad( '', strlen( $t_release_title ), '=' ), '<br />';
+
+		$t_description = version_get_field( $p_version_id, 'description' );
+		if ( ( $t_description !== false ) && !is_blank( $t_description ) ) {
+			echo string_display( "<br />$t_description<br /><br />" );
+		}
+	}
+
 ?>
 <?php
+	$f_project_id = gpc_get_int( 'project_id', helper_get_current_project() );
+
 	# this page is invalid for the 'All Project' selection
-	if ( ALL_PROJECTS == helper_get_current_project() ) {
+	if ( ALL_PROJECTS == $f_project_id ) {
 		print_header_redirect( 'login_select_proj_page.php?ref=changelog_page.php' );
 	}
 
-	$t_project_id = helper_get_current_project();
-	access_ensure_project_level( config_get( 'view_changelog_threshold' ), $t_project_id );
+	access_ensure_project_level( config_get( 'view_changelog_threshold' ), $f_project_id );
 
 	html_page_top1( lang_get( 'changelog' ) );  // title
 	html_page_top2();
 
-	$f_project_id	= helper_get_current_project();
 	$c_project_id   = db_prepare_int( $f_project_id );
 	$t_project_name = project_get_field( $f_project_id, 'name' );
 	$t_can_view_private = access_has_project_level( config_get( 'private_bug_threshold' ), $f_project_id );
@@ -38,7 +55,7 @@
 
 	$t_version_rows = version_get_all_rows( $f_project_id );
 
-	echo '<br /><span class="pagetitle">', lang_get( 'changelog' ), '</span><br /><br />';
+	echo '<br /><span class="pagetitle">', $t_project_name, ' - ', lang_get( 'changelog' ), '</span><br /><br />';
 	echo '<tt>';
 
 	$i = 0;
@@ -47,10 +64,21 @@
 		$t_version = $t_version_row['version'];
 		$c_version = db_prepare_string( $t_version );
 
-		$t_version_id = version_get_id( $c_version );
+		$t_version_id = version_get_id( $c_version, $f_project_id );
 
 		$query = "SELECT id, view_state FROM $t_bug_table WHERE project_id='$c_project_id' AND fixed_in_version='$c_version' ORDER BY last_updated DESC";
 
+		$t_description = version_get_field( $t_version_id, 'description' );
+		if ( !is_blank( $t_description ) ) {
+			if ( $i > 0 ) {
+				echo '<br />';
+			}
+
+			print_version_header( $t_version_id );
+			$t_version_header_printed = true;
+		} else {
+			$t_version_header_printed = false;
+		}
 		$t_first_entry = true;
 		
 		for ( $t_result = db_query( $query ); !$t_result->EOF; $t_result->MoveNext() ) {
@@ -66,20 +94,14 @@
 			}
 
 			# Print the header for the version with the first changelog entry to be added.
-			if ( $t_first_entry ) {
+			if ( $t_first_entry && !$t_version_header_printed ) {
 				if ( $i > 0 ) {
 					echo '<br />';
 				}
 
-				$t_release_title = $t_project_name . ' - ' . $t_version;
-				echo $t_release_title, '<br />';
-				echo str_pad( '', strlen( $t_release_title ), '=' ), '<br />';
+				print_version_header( $t_version_id );
 
-				$t_description = version_get_field( $t_version_id, 'description' );
-				if ( ( $t_description !== false ) && !is_blank( $t_description ) ) {
-					echo string_display( "<br />$t_description<br /><br />" );
-				}
-
+				$t_version_header_printed = true;
 				$t_first_entry = false;
 			}
 
