@@ -5,6 +5,8 @@ Mantis ChangeLog
 - 0004555: [administration] Warnings on set_time_limit() in safe mode (vboctor)
 - 0004528: [localization] Error on logout page with language=auto (thraxisp)
 - 0004393: [feature] Version should be add with advanced options (bpfennig)
+- 0004400: [feature] Changelog should view release notes (vboctor)
+- 0004658: [feature] Changelog should support project_id parameter (vboctor)
 - 0004363: [bugtracker] "Add user to project" should have an additional button (bpfennig)
 - 0004377: [bugtracker] $g_bug_submit_status should depends on user level (bpfennig)
 - 0004407: [administration] History Column Titles do not match table text formating (bpfennig)
